Bug 127129 - FILEOPEN PPTX: font highlight is lost in table cells
Summary: FILEOPEN PPTX: font highlight is lost in table cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: filter:pptx
: 128615 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-23 21:13 UTC by Gerald Pfeifer
Modified: 2020-11-22 06:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample PPTX document generated in 365 (28.39 KB, application/vnd.ms-powerpoint)
2019-08-23 21:13 UTC, Gerald Pfeifer
Details
How it looks in 365 (12.31 KB, image/png)
2019-08-23 21:14 UTC, Gerald Pfeifer
Details
How it looks in LibreOffice (12.36 KB, image/png)
2019-08-23 21:14 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2019-08-23 21:13:26 UTC
Created attachment 153613 [details]
Sample PPTX  document generated in 365

When opening the attached PPTX in LibreOffice, the highlighting of the
two cells in the top row is lost.

Similarly, if these cells are highlighted in LibreOffice and the document
then saved, the highlighting is lost.


(If appears both import and export filters simply ignore this attribute?)
Comment 1 Gerald Pfeifer 2019-08-23 21:14:07 UTC
Created attachment 153614 [details]
How it looks in 365
Comment 2 Gerald Pfeifer 2019-08-23 21:14:49 UTC
Created attachment 153615 [details]
How it looks in LibreOffice

Version: 6.3.0.4
Build ID: 30(Build:4)
CPU threads: 4; OS: Linux 5.2; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 m.a.riosv 2019-08-24 11:33:48 UTC
Repro with
Version: 6.2.6.2 (x64)
Build ID: 684e730861356e74889dfe6dbddd3562aae2e6ad
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL

Highlighting with Impress it's also lost saving on pptx, but not saving on the native file format odp
Comment 4 Xisco Faulí 2019-09-18 11:27:02 UTC
Also reproduced in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 5 Xisco Faulí 2019-10-10 18:53:01 UTC
I think I know how to fix this one...
Comment 6 Commit Notification 2019-10-12 10:25:01 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57cfbc6830c3d8dc64107aed4a5555613415f069

tdf#127129: pptx: map highlight to CharBackColor

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Tamás Zolnai 2019-10-12 10:32:24 UTC
A comment about the fixing patch:
In general, MSO has two kinds of character highlight (shading and highlighting), which makes the situation more complex. LO has also two character properties for these two attributes (CharBackColor and CharHighlight) However, in PowerPoint, I can't see the UI button for shading, so I expect that we have only highlighting here. In this case, using a CharBackColor seems OK. This is the primary attribute. CharHighlight is used only when we have both shading and highlighting to store both values.
Comment 8 Xisco Faulí 2019-10-13 16:54:41 UTC
(In reply to Tamás Zolnai from comment #7)
> A comment about the fixing patch:
> In general, MSO has two kinds of character highlight (shading and
> highlighting), which makes the situation more complex. LO has also two
> character properties for these two attributes (CharBackColor and
> CharHighlight) However, in PowerPoint, I can't see the UI button for
> shading, so I expect that we have only highlighting here. In this case,
> using a CharBackColor seems OK. This is the primary attribute. CharHighlight
> is used only when we have both shading and highlighting to store both values.

Hi Tamás,
thanks for the valuable comment. Initially I tried with CharHighlight but it didn't work so I tried with CharBackColor and it worked
Comment 9 Commit Notification 2019-10-13 19:16:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/3ff748399ded70c71c9340ee6f1fdd7e7af28180

tdf#127129: pptx: map highlight to CharBackColor

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2019-11-07 09:54:45 UTC
*** Bug 128615 has been marked as a duplicate of this bug. ***