tdf#127129: pptx: map highlight to CharBackColor

Change-Id: I033c15db6848e96ba6b6bd7a2852c9e4d1524a8e
Reviewed-on: https://gerrit.libreoffice.org/80630
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>